--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/orientation.jpg); 
+  background-image: url(img/orientation.png); 
   background-repeat: no-repeat;
   background-position: center;
   background-color: rgb(0, 0, 0);
