messy commit, working version of blue leaf rings (fake half circles really) for some juicy item collection

--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ canvas {
   left: 10px;
   max-width: 200px;
 }
+#debug ul, #debug li {
+  list-style: none;
+  margin: 0;
+  padding:0;
+}
 
 #refresh {
   display: block;
