--- a/style.css
+++ b/style.css
@@ -19,11 +19,14 @@ canvas {
   height: 100%;
 }
 
-#orientation {
+#ui, #orientation, #refresh, #pause {
   margin: 0 auto;
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#orientation {
   width: 100%;
   height: 100%;
   background-image: url(img/orientation.png); 
@@ -39,7 +42,19 @@ canvas {
   width: 50px;
   height: 50px;
   opacity: 0;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  margin: 0;
+}
+
+#pause {
+  opacity: .3;
+  border: 0;
+  background: none;
+  font: 11px 'Avenir-Medium', helvetica, sans-serif;
+  outline: none;
+  top: 20px;
+  left: 10px;
+}
+
+.hide {
+  display: none;
 }
