--- a/style.css
+++ b/style.css
@@ -19,22 +19,11 @@ canvas {
   height: 100%;
 }
 
-#ui, #orientation, #refresh, #pause {
+#ui, #refresh, #pause {
   margin: 0 auto;
   position: absolute;
   top: 0;
   left: 0;
-}
-
-#orientation {
-  width: 100%;
-  height: 100%;
-  background-image: url(img/orientation.png); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgb(0, 0, 0);
-  z-index: 999;
-  display: none;
 }
 
 #refresh {
